--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
 Los computadores de tubos de vacío representan una etapa crucial en la historia de la tecnología. Su desarrollo no solo permitió avances significativos en el procesamiento de datos, sino que también allanó el camino para las innovaciones que definirían la era digital. Al mirar hacia atrás en estos primeros gigantes de la informática, podemos apreciar mejor el progreso que ha llevado a la tecnología que usamos hoy.
 <h3 id="tutorial git">tutorial git</h3>
+Crear repositorio en la carpeta deseada usando el comando git init
 
 
 </html>
