incerto el tutorial de git

--- a/index.html
+++ b/index.html
@@ -156,6 +156,31 @@
 Los computadores de tubos de vacío representan una etapa crucial en la historia de la tecnología. Su desarrollo no solo permitió avances significativos en el procesamiento de datos, sino que también allanó el camino para las innovaciones que definirían la era digital. Al mirar hacia atrás en estos primeros gigantes de la informática, podemos apreciar mejor el progreso que ha llevado a la tecnología que usamos hoy.
 <h3 id="tutorial git">tutorial git</h3>
 Crear repositorio en la carpeta deseada usando el comando git init
-
+<div></div>
+<img src="Imagen1.png">
+<div></div>
+Introducir el archivo que queremos rastrear con la terminal usando el comando git add “nobre del archivo.html”
+<div></div>
+<img src="Imagen2.png">
+<div></div>
+Usar git status para mirar el estado del archivo y si existen cambios que no se han agregado
+<div></div>
+<img src="Imagen3.png">
+<div></div>
+Se usa git commit -m “un comentario” para agregar los cambios que se hayan hecho en el master
+<div></div>
+<img src="Imagen4.png">
+<div></div>
+Para crear ramas y poder hacer cambios en nuestro proyectos sin temor a dañar nuestro master seguimos estos pasos: git checkout -b “nombre de la rama que vamos a crear”
+<div></div>
+<img src="Imagen5.png">
+<div></div>
+Para unir los cambios hechos en la ramificación a nuestro master, primero debemos volver a la master con el comando git checkout master
+<div></div>
+<img src="Imagen6.png">
+<div></div>
+Usamos el comando git merge y nombre de la ramificación
+<div></div>
+<img src="Imagen7.png">
 
 </html>
